Fix for uneven parallax

--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -645,13 +645,6 @@ h1, h2, h3, h4, h5, h6 {
   background-repeat: no-repeat;
 }
 
-#qbootstrap-venue {
-  background-size: cover;
-  position: relative;
-  background-repeat: no-repeat;
-  z-index: 0;
-  width: 100%;
-}
 #qbootstrap-venue .section-heading {
   margin-bottom: 0 !important;
 }
